# node-scripts

./: .gitignore  agent.py  asr.py  asr2_parakeet.py  pyproject.toml
consumption_tracker/: process.py  pyproject.toml
discorddb/: bot.py  database.py  pyproject.toml
interface/: asr_tests.md
